# devcontainer-content-mismatch

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml
.devcontainer/: devcontainer.json
static/: request.js
templates/: index.html
